# SlicerANTsPy

./: .gitignore  ANTsRegistration_Tutorial.md  CMakeLists.txt  README.md
ANTsRegistration/: ANTsPyRegistration.py  ANTsRegistration.py  CMakeLists.txt
ANTsRegistration/Resources/UI/: ANTsRegistration.ui  ANTsRegistration.ui.backup
ITKANTsCommon/: ITKANTsCommon.py
Scripts/: AverageImage.py
